--- a/ChordDHTPeer-Project3-Oppgave/.classpath
+++ b/ChordDHTPeer-Project3-Oppgave/.classpath
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/tdoy/.p2/pool/plugins/org.junit.jupiter.api_5.3.1.v20181005-1442.jar">
+	<classpathentry kind="lib" path="C:/Users/janwi/.m2/repository/junit/junit/4.11/junit-4.11.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://junit.org/junit5/docs/current/api/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/janwi/.m2/repository/javax/xml/bind/jaxb-api/2.4.0-b180725.0427/jaxb-api-2.4.0-b180725.0427.jar" sourcepath="C:/Users/janwi/.m2/repository/javax/xml/bind/jaxb-api/2.4.0-b180725.0427/jaxb-api-2.4.0-b180725.0427-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.archivename" value="jaxb-api-2.4.0-b180725.0427.jar"/>
+			<attribute name="maven.groupId" value="javax.xml.bind"/>
+			<attribute name="maven.artifactId" value="jaxb-api"/>
+			<attribute name="maven.version" value="2.4.0-b180725.0427"/>
+			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
